precompiles/macro/tests/compile-fail/precompile/fn-modifiers/pre-check-multiple.stderr
error: The pre_check attribute must be the only precompile attribute of a function
  --> tests/compile-fail/precompile/fn-modifiers/pre-check-multiple.rs:25:16
   |
25 |     #[precompile::pre_check]
   |                   ^^^^^^^^^
